adding informations into swagger and removing auth from routes
